--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "league/oauth2-google": "^4.0",
         "maatwebsite/excel": "3.1.48",
         "nesbot/carbon": "^2.69",
+        "phpmailer/phpmailer": "^6.9",
+        "pusher/pusher-php-server": "^7.2",
         "sentry/sentry-laravel": "^3.8",
         "spatie/laravel-permission": "^5.10",
         "symfony/http-client": "^6.3",
